# czml3

./: .coveragerc  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  generate_classes.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: publish-to-pypi.yml  workflow.yml
src/: Basic Example After CZML Fix.ipynb
src/czml3/: __init__.py  _version.py  base.py  common.py  constants.py  core.py  enums.py  generated_properties.py  meta.py  properties.py  types.py  utils.py  values.py  widget.py
src/czml3/examples/: __init__.py  simple.py
templates/: class.tpl  module.tpl
tests/: simple.czml  test_core.py  test_document.py  test_examples.py  test_integration.py  test_packet.py  test_properties.py  test_readme_examples.py  test_rectangle_image.py  test_types.py  test_utils.py  test_values.py  test_widget.py
