[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "czml3"
authors = [
    {name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space"},
]
description = "Python 3 library to write CZML"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["czml", "cesium", "orbits"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "attrs>=19.2",
    'python-dateutil>=2.7,<3',
    "w3lib",
    'tomli; python_version < "3.11"',  # for versioneer
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/poliastro/czml3"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/poliastro/czml3"
Issues = "https://github.com/poliastro/czml3/issues"
Changelog = "https://github.com/poliastro/czml3/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "astropy",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "types-python-dateutil",
    "tox",
    "build",
    "ruff",
    "versioneer",
]

[tool.setuptools]
include-package-data = true
dynamic.version = {attr = "czml3.__version__"}

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
exclude = ['versioneer\.py$', '_version\.py$']

# More strict checks for library code
[[tool.mypy.overrides]]
module = "czml3"
disallow_untyped_defs = true

# Ignore certain missing imports
[[tool.mypy.overrides]]
module = ["astropy.*", "setuptools.*", "w3lib.*"]
ignore_missing_imports = true

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[tool.versioneer]
VCS = "git"
style = "pep440-post"
versionfile_source = "src/czml3/_version.py"
versionfile_build = "czml3/_version.py"
tag_prefix = "v"
parentdir_prefix = "czml3-"

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = quality, test, pypy, pypy3, py{37,38,39,310,311}

    [testenv]
    basepython =
        pypy: {env:PYTHON:pypy}
        pypy3: {env:PYTHON:pypy3}
        py37: {env:PYTHON:python3.7}
        py38: {env:PYTHON:python3.8}
        py39: {env:PYTHON:python3.9}
        py310: {env:PYTHON:python3.10}
        py311: {env:PYTHON:python3.11}
        {quality,reformat,test,coverage}: {env:PYTHON:python3}
    setenv =
        PYTHONUNBUFFERED = yes
        PYTEST_EXTRA_ARGS = --mypy
    extras = dev
    commands =
        pytest {env:PYTEST_EXTRA_ARGS:} src tests {posargs:-vv}

    [testenv:coverage]
    description = measures code coverage
    usedevelop = True
    commands =
        pytest --cov czml3 {posargs:--cov-report=term-missing}

    [testenv:quality]
    description = checks code quality
    deps =
        build
        ruff
    skip_install = true
    commands =
        python setup.py check --strict --metadata
        ruff check
        python -m build .

    [testenv:reformat]
    description = reformats the code
    deps =
        ruff format
    skip_install = true
    commands =
        ruff format src tests setup.py --exclude=_version.py
        ruff check --fix src tests setup.py --exclude=_version.py
"""

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "C","W","B9"
]

[tool.ruff]
extend-exclude = ["versioneer.py", "_version.py"]
