[tool.ruff.lint]
ignore = ["E501"]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "C","W","B9"
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = quality, test, pypy, pypy3, py{310,311,312,313}

    [gh-actions]
    python =
        3.10: py310
        3.11: py311, quality, test, pypy, pypy3
        3.12: py312
        3.13: py313

    [testenv]
    basepython =
        pypy: {env:PYTHON:pypy}
        pypy3: {env:PYTHON:pypy3}
        py310: {env:PYTHON:python3.10}
        py311: {env:PYTHON:python3.11}
        py312: {env:PYTHON:python3.12}
        py313: {env:PYTHON:python3.13}
        {quality,reformat,test,coverage}: {env:PYTHON:python3}
    setenv =
        PYTHONUNBUFFERED = yes
        PYTEST_EXTRA_ARGS = --mypy
    extras = dev
    commands =
        pytest {env:PYTEST_EXTRA_ARGS:} src tests {posargs:-vv}

    [testenv:coverage]
    description = measures code coverage
    usedevelop = True
    commands =
        pytest --cov czml3 {posargs:--cov-report=term-missing}

    [testenv:quality]
    description = checks code quality
    deps =
        build
        ruff
    skip_install = true
    commands =
        python -m ruff check
        python -m build .

    [testenv:reformat]
    description = reformats the code using ruff
    deps =
        ruff
    skip_install = true
    commands =
        python -m ruff format
        python -m ruff check --fix
"""

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "czml3"
authors = [
    {name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space"},
]
description = "Python 3 library to write CZML"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["czml", "cesium", "orbits"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pydantic>=2.10.1",
    "python-dateutil>=2.7,<3",
    "w3lib",
    "typing-extensions>=4.12.0",
    "StrEnum>=0.4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "astropy",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "types-python-dateutil",
    "tox",
    "build",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/poliastro/czml3"
Repository = "https://github.com/poliastro/czml3"
Issues = "https://github.com/poliastro/czml3/issues"
Changelog = "https://github.com/poliastro/czml3/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "czml3.__version__"}

[tool.mypy]
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

# More strict checks for library code
[[tool.mypy.overrides]]
module = "czml3"
disallow_untyped_defs = true

# Ignore certain missing imports
[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "setuptools.*",
    "w3lib.*",
]
ignore_missing_imports = true
