[metadata]
name = czml3
description = Python 3 library to write CZML
long_description = file: README.rst
license = MIT
author = Juan Luis Cano Rodríguez
author_email = hello@juanlu.space
keywords =
    czml
    cesium
    orbits
url = https://github.com/poliastro/czml3
download_url = https://github.com/poliastro/czml3
project_urls =
    Source=https://github.com/poliastro/czml3
    Tracker=https://github.com/poliastro/czml3/issues
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    =src
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    attrs>=19.2
    python-dateutil>=2.7,<3
    w3lib
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    astropy
    pytest
    pytest-cov
    pytest-mypy

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440-post
versionfile_source = src/czml3/_version.py
versionfile_build = czml3/_version.py
tag_prefix = v
parentdir_prefix = czml3-
